@@ -24,14 +24,13 @@ import org.apache.shardingsphere.mcp.support.workflow.model.DDLArtifact;
 import org.apache.shardingsphere.mcp.support.workflow.model.InteractionPlan;
 import org.apache.shardingsphere.mcp.support.workflow.model.IndexPlan;
 import org.apache.shardingsphere.mcp.support.workflow.model.RuleArtifact;
+import org.apache.shardingsphere.mcp.support.workflow.model.SecretReferenceValue;
 import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowContextSnapshot;
 import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowIssue;
 import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowKind;
 import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowLifecycle;
 import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowRequest;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.CsvSource;
 
 import java.util.List;
 import java.util.Map;
@@ -85,19 +84,16 @@ class WorkflowPlanPayloadBuilderTest {
         assertThat(actualReviewFocus.get("artifact_categories"), is(List.of("algorithm_properties")));
         assertThat(actualReviewFocus.get("side_effect_scope"), is(List.of()));
         assertFalse((Boolean) actualReviewFocus.get("manual_only"));
-        assertFalse(actualReviewFocus.containsKey("requires_user_approval"));
         assertThat(actualReviewFocus.get("next_review_action"), is("answer_clarification_questions"));
         List<?> actualClarificationQuestions = (List<?>) actual.get("clarification_questions");
-        assertThat(((Map<?, ?>) actualClarificationQuestions.get(0)).get("input_type"), is("boolean"));
-        assertThat(((Map<?, ?>) actualClarificationQuestions.get(0)).get("allowed_values"), is(List.of(true, false)));
-        assertThat(((Map<?, ?>) actualClarificationQuestions.get(0)).get("display_message"), is("Do you need LIKE query?"));
+        assertThat(((Map<?, ?>) actualClarificationQuestions.getFirst()).get("input_type"), is("boolean"));
+        assertThat(((Map<?, ?>) actualClarificationQuestions.getFirst()).get("allowed_values"), is(List.of(true, false)));
+        assertThat(((Map<?, ?>) actualClarificationQuestions.getFirst()).get("display_message"), is("Do you need LIKE query?"));
         assertThat(((Map<?, ?>) actualClarificationQuestions.get(1)).get("input_type"), is("secret"));
         assertTrue((Boolean) ((Map<?, ?>) actualClarificationQuestions.get(1)).get("secret"));
-        assertFalse(actual.containsKey("recommended_next_tool"));
-        assertFalse(actual.containsKey("requires_user_approval"));
         assertThat(((Map<?, ?>) actual.get("proxy_topology_hint")).get("expected_runtime_view"), is("proxy_rule_distsql"));
         assertTrue(extractResourceUris((List<?>) actual.get("resources_to_read")).contains("shardingsphere://features/encrypt/algorithms"));
-        assertThat(((Map<?, ?>) ((List<?>) actual.get("next_actions")).get(0)).get("type"), is("ask_user"));
+        assertThat(((Map<?, ?>) ((List<?>) actual.get("next_actions")).getFirst()).get("type"), is("ask_user"));
     }
     
     @Test
@@ -119,10 +115,32 @@ class WorkflowPlanPayloadBuilderTest {
         assertThat(actual.get("missing_required_inputs"), is(List.of("primary_algorithm_properties.aes-key-value", "assisted_query_algorithm_properties.salt",
                 "like_query_algorithm_properties.token")));
         List<?> actualClarificationQuestions = (List<?>) actual.get("clarification_questions");
-        assertThat(((Map<?, ?>) actualClarificationQuestions.get(0)).get("field"), is("primary_algorithm_properties.aes-key-value"));
+        assertThat(((Map<?, ?>) actualClarificationQuestions.getFirst()).get("field"), is("primary_algorithm_properties.aes-key-value"));
         assertThat(((Map<?, ?>) actualClarificationQuestions.get(1)).get("field"), is("assisted_query_algorithm_properties.salt"));
         assertThat(((Map<?, ?>) actualClarificationQuestions.get(2)).get("field"), is("like_query_algorithm_properties.token"));
-        assertTrue((Boolean) ((Map<?, ?>) actualClarificationQuestions.get(0)).get("secret"));
+        assertTrue((Boolean) ((Map<?, ?>) actualClarificationQuestions.getFirst()).get("secret"));
+    }
+    
+    @Test
+    void assertBuildIncludesSecretReferenceSummary() {
+        WorkflowContextSnapshot snapshot = new WorkflowContextSnapshot();
+        snapshot.setPlanId("plan-1");
+        snapshot.setWorkflowKind(WorkflowKind.valueOf("encrypt.rule"));
+        snapshot.setStatus(WorkflowLifecycle.STATUS_PLANNED);
+        snapshot.setClarifiedIntent(new ClarifiedIntent());
+        WorkflowRequest request = new WorkflowRequest();
+        request.getPrimaryAlgorithmSecretReferences().put("aes-key-value", SecretReferenceValue.create());
+        snapshot.setRequest(request);
+        snapshot.setInteractionPlan(InteractionPlan.create("plan-1", request, "Encrypt workflow plan.", List.of("review"), List.of("rules")));
+        Map<String, Object> actual = WorkflowPlanPayloadBuilder.build(snapshot);
+        Map<?, ?> actualSummary = (Map<?, ?>) actual.get("secret_reference_summary");
+        assertTrue((Boolean) actualSummary.get("required"));
+        assertThat(actualSummary.get("reference_count"), is(1));
+        assertThat(actualSummary.get("value_handling"), is("manual_execution"));
+        assertThat(((Map<?, ?>) ((List<?>) actualSummary.get("references")).getFirst()).get("label"), is("secret_placeholder:primary.aes-key-value"));
+        assertThat(((Map<?, ?>) ((List<?>) actualSummary.get("references")).getFirst()).get("manual_placeholder"), is("<SECRET_VALUE_PRIMARY_AES_KEY_VALUE>"));
+        assertFalse(String.valueOf(actualSummary).contains("placeholder://secret-value-1"));
+        assertFalse(String.valueOf(actualSummary).contains("user label"));
     }
     
     @Test
@@ -146,15 +164,11 @@ class WorkflowPlanPayloadBuilderTest {
         assertTrue(actualResourceUris.contains("shardingsphere://features/mask/databases/logic_db/tables/orders/rules"));
         assertFalse(actualResourceUris.contains("shardingsphere://databases/logic_db/schemas/public/tables/orders/columns"));
         assertFalse(actualResourceUris.contains("shardingsphere://databases/logic_db/schemas/public/tables/orders/indexes"));
-        assertFalse(actual.containsKey("recommended_next_tool"));
-        assertFalse(actual.containsKey("requires_user_approval"));
         Map<?, ?> actualReviewFocus = (Map<?, ?>) actual.get("review_focus");
-        assertFalse(actualReviewFocus.containsKey("requires_user_approval"));
         assertThat(actualReviewFocus.get("next_review_action"), is("call_database_gateway_apply_workflow_preview"));
-        Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actual.get("next_actions")).get(0);
+        Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actual.get("next_actions")).getFirst();
         assertThat(actualNextAction.get("tool_name"), is("database_gateway_apply_workflow"));
         assertThat(((Map<?, ?>) actualNextAction.get("arguments")).get("execution_mode"), is("preview"));
-        assertFalse(actualNextAction.containsKey("requires_user_approval"));
     }
     
     @Test
@@ -192,7 +206,47 @@ class WorkflowPlanPayloadBuilderTest {
         List<String> actualResourceUris = extractResourceUris((List<?>) actual.get("resources_to_read"));
         assertTrue(actualResourceUris.contains("shardingsphere://features/readwrite-splitting/load-balance-algorithm-plugins"));
         assertTrue(actualResourceUris.contains("shardingsphere://features/readwrite-splitting/databases/logic_db/rules"));
-        assertThat(((Map<?, ?>) ((List<?>) actual.get("next_actions")).get(0)).get("tool_name"), is("database_gateway_apply_workflow"));
+        assertTrue(actualResourceUris.contains("shardingsphere://databases/logic_db/storage-units"));
+        assertThat(((Map<?, ?>) ((List<?>) actual.get("next_actions")).getFirst()).get("tool_name"), is("database_gateway_apply_workflow"));
+    }
+    
+    @Test
+    void assertBuildIncludesReadwriteStatusResources() {
+        WorkflowContextSnapshot snapshot = new WorkflowContextSnapshot();
+        snapshot.setPlanId("plan-1");
+        snapshot.setWorkflowKind(WorkflowKind.valueOf("readwrite.status"));
+        snapshot.setStatus(WorkflowLifecycle.STATUS_PLANNED);
+        snapshot.setClarifiedIntent(new ClarifiedIntent());
+        WorkflowRequest request = new WorkflowRequest();
+        request.setDatabase("logic_db");
+        snapshot.setRequest(request);
+        snapshot.setInteractionPlan(InteractionPlan.create("plan-1", request, "Readwrite status workflow plan.", List.of("Review"), List.of("rules")));
+        Map<String, Object> actual = WorkflowPlanPayloadBuilder.build(snapshot);
+        List<String> actualResourceUris = extractResourceUris((List<?>) actual.get("resources_to_read"));
+        assertTrue(actualResourceUris.contains("shardingsphere://features/readwrite-splitting/databases/logic_db/status"));
+        assertTrue(actualResourceUris.contains("shardingsphere://databases/logic_db/storage-units"));
+    }
+    
+    @Test
+    void assertBuildIncludesShadowResources() {
+        WorkflowContextSnapshot snapshot = new WorkflowContextSnapshot();
+        snapshot.setPlanId("plan-1");
+        snapshot.setWorkflowKind(WorkflowKind.valueOf("shadow.rule"));
+        snapshot.setStatus(WorkflowLifecycle.STATUS_PLANNED);
+        snapshot.setClarifiedIntent(new ClarifiedIntent());
+        WorkflowRequest request = new WorkflowRequest();
+        request.setDatabase("logic_db");
+        request.setTable("t_order");
+        snapshot.setRequest(request);
+        snapshot.setInteractionPlan(InteractionPlan.create("plan-1", request, "Shadow workflow plan.", List.of("Review"), List.of("rules")));
+        Map<String, Object> actual = WorkflowPlanPayloadBuilder.build(snapshot);
+        List<String> actualResourceUris = extractResourceUris((List<?>) actual.get("resources_to_read"));
+        assertTrue(actualResourceUris.contains("shardingsphere://features/shadow/algorithm-plugins"));
+        assertTrue(actualResourceUris.contains("shardingsphere://features/shadow/databases/logic_db/rules"));
+        assertTrue(actualResourceUris.contains("shardingsphere://features/shadow/databases/logic_db/tables/t_order/rules"));
+        assertTrue(actualResourceUris.contains("shardingsphere://databases/logic_db/storage-units"));
+        assertTrue(actualResourceUris.contains("shardingsphere://databases/logic_db/single-tables"));
+        assertTrue(actualResourceUris.contains("shardingsphere://databases/logic_db/single-tables/t_order"));
     }
     
     @Test
@@ -213,6 +267,9 @@ class WorkflowPlanPayloadBuilderTest {
         assertTrue(actualResourceUris.contains("shardingsphere://features/sharding/algorithm-plugins"));
         assertTrue(actualResourceUris.contains("shardingsphere://features/sharding/databases/logic_db/table-rules"));
         assertTrue(actualResourceUris.contains("shardingsphere://features/sharding/databases/logic_db/table-nodes"));
+        assertTrue(actualResourceUris.contains("shardingsphere://databases/logic_db/storage-units"));
+        assertTrue(actualResourceUris.contains("shardingsphere://databases/logic_db/single-tables"));
+        assertTrue(actualResourceUris.contains("shardingsphere://databases/logic_db/single-tables/orders"));
         assertTrue(actualResourceUris.contains("shardingsphere://features/sharding/databases/logic_db/tables/orders/table-rule"));
         assertTrue(actualResourceUris.contains("shardingsphere://features/sharding/databases/logic_db/tables/orders/nodes"));
         assertFalse(actualResourceUris.contains("shardingsphere://databases/logic_db/schemas/public/tables/orders/columns"));
@@ -239,7 +296,7 @@ class WorkflowPlanPayloadBuilderTest {
         assertFalse(actual.containsKey(WorkflowArtifactPayloadUtils.PAYLOAD_KEY_DDL_ARTIFACTS));
         assertFalse(actual.containsKey(WorkflowArtifactPayloadUtils.PAYLOAD_KEY_INDEX_PLAN));
         assertThat(((List<?>) actual.get(WorkflowArtifactPayloadUtils.PAYLOAD_KEY_DISTSQL_ARTIFACTS)).size(), is(1));
-        assertThat(((Map<?, ?>) ((List<?>) actual.get(WorkflowArtifactPayloadUtils.PAYLOAD_KEY_DISTSQL_ARTIFACTS)).get(0)).get("sql"),
+        assertThat(((Map<?, ?>) ((List<?>) actual.get(WorkflowArtifactPayloadUtils.PAYLOAD_KEY_DISTSQL_ARTIFACTS)).getFirst()).get("sql"),
                 is("CREATE SHARDING TABLE RULE orders(DATANODES('ds.orders'))"));
     }
     
@@ -259,12 +316,10 @@ class WorkflowPlanPayloadBuilderTest {
         Map<String, Object> actual = WorkflowPlanPayloadBuilder.build(snapshot);
         Map<?, ?> actualReviewFocus = (Map<?, ?>) actual.get("review_focus");
         assertTrue((Boolean) actualReviewFocus.get("manual_only"));
-        assertFalse(actualReviewFocus.containsKey("requires_user_approval"));
         assertThat(((Map<?, ?>) actual.get("argument_provenance")).get("execution_mode"), is("inferred_from_intent"));
-        Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actual.get("next_actions")).get(0);
+        Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actual.get("next_actions")).getFirst();
         assertThat(actualNextAction.get("tool_name"), is("database_gateway_apply_workflow"));
         assertThat(((Map<?, ?>) actualNextAction.get("arguments")).get("execution_mode"), is("preview"));
-        assertFalse(actualNextAction.containsKey("requires_user_approval"));
     }
     
     @Test
@@ -278,34 +333,26 @@ class WorkflowPlanPayloadBuilderTest {
         snapshot.setRequest(request);
         snapshot.setInteractionPlan(InteractionPlan.create("plan-1", request, "Encrypt workflow plan.", List.of("Review"), List.of("rules")));
         Map<String, Object> actual = WorkflowPlanPayloadBuilder.build(snapshot);
-        Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actual.get("next_actions")).get(0);
+        Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actual.get("next_actions")).getFirst();
         assertThat(actual.get("response_mode"), is("terminal"));
-        assertFalse(actual.containsKey("recommended_next_tool"));
         assertThat(actualNextAction.get("type"), is("tool_call"));
         assertThat(actualNextAction.get("tool_name"), is("database_gateway_plan_encrypt_rule"));
     }
     
-    @ParameterizedTest(name = "{0}")
-    @CsvSource({
-            "table rule,sharding.table.rule,database_gateway_plan_sharding_table_rule",
-            "table reference,sharding.table.reference,database_gateway_plan_sharding_table_reference_rule",
-            "default strategy,sharding.default.strategy,database_gateway_plan_sharding_default_strategy",
-            "key generator,sharding.key.generator,database_gateway_plan_sharding_key_generator",
-            "key generate strategy,sharding.key.generate.strategy,database_gateway_plan_sharding_key_generate_strategy",
-            "component cleanup,sharding.component.cleanup,database_gateway_plan_sharding_rule_component_cleanup"
-    })
-    void assertBuildRecommendsShardingPlanningToolAfterFailure(final String displayName, final String workflowKind, final String expectedToolName) {
+    @Test
+    void assertBuildAsksUserWhenPlanningToolIsNotInCatalogAfterFailure() {
         WorkflowContextSnapshot snapshot = new WorkflowContextSnapshot();
         snapshot.setPlanId("plan-1");
-        snapshot.setWorkflowKind(WorkflowKind.valueOf(workflowKind));
+        snapshot.setWorkflowKind(WorkflowKind.valueOf("sharding.table.rule"));
         snapshot.setStatus(WorkflowLifecycle.STATUS_FAILED);
         snapshot.setClarifiedIntent(new ClarifiedIntent());
         WorkflowRequest request = new WorkflowRequest();
         snapshot.setRequest(request);
         snapshot.setInteractionPlan(InteractionPlan.create("plan-1", request, "Sharding workflow plan.", List.of("Review"), List.of("rules")));
         Map<String, Object> actual = WorkflowPlanPayloadBuilder.build(snapshot);
-        Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actual.get("next_actions")).get(0);
-        assertThat(actualNextAction.get("tool_name"), is(expectedToolName));
+        Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actual.get("next_actions")).getFirst();
+        assertThat(actualNextAction.get("type"), is("ask_user"));
+        assertThat(actualNextAction.get("required_inputs"), is(List.of("workflow_kind", "issues")));
     }
     
     private List<String> extractResourceUris(final List<?> resources) {
