@@ -17,23 +17,10 @@
 
 package org.apache.shardingsphere.test.e2e.mcp.runtime.production;
 
-import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.hasItems;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.isA;
-
-import io.modelcontextprotocol.client.McpClient;
 import io.modelcontextprotocol.client.McpSyncClient;
-import io.modelcontextprotocol.client.transport.HttpClientStreamableHttpTransport;
-import io.modelcontextprotocol.client.transport.ServerParameters;
-import io.modelcontextprotocol.client.transport.StdioClientTransport;
 import io.modelcontextprotocol.spec.McpClientTransport;
 import io.modelcontextprotocol.spec.McpSchema;
-import io.modelcontextprotocol.spec.ProtocolVersions;
-import org.apache.shardingsphere.mcp.bootstrap.MCPBootstrap;
-import org.apache.shardingsphere.mcp.bootstrap.transport.MCPTransportJsonMapperFactory;
 import org.apache.shardingsphere.mcp.support.database.metadata.jdbc.RuntimeDatabaseConfiguration;
-import org.apache.shardingsphere.mcp.support.descriptor.MCPShardingSphereMetadataKeys;
 import org.apache.shardingsphere.test.e2e.mcp.env.MCPE2ECondition;
 import org.apache.shardingsphere.test.e2e.mcp.support.OfficialMCPToolNames;
 import org.apache.shardingsphere.test.e2e.mcp.support.runtime.MySQLRuntimeTestSupport;
@@ -41,27 +28,28 @@ import org.apache.shardingsphere.test.e2e.mcp.support.runtime.RuntimeTransport;
 import org.apache.shardingsphere.test.e2e.mcp.support.transport.MCPInteractionPayloads;
 import org.apache.shardingsphere.test.e2e.mcp.support.transport.MCPPayloadAssertions;
 import org.apache.shardingsphere.test.e2e.mcp.support.transport.client.MCPInteractionClient;
-import org.apache.shardingsphere.test.e2e.mcp.support.transport.client.MCPStdioLogbackConfiguration;
+import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assumptions;
+import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.condition.EnabledIf;
 import org.junit.jupiter.params.provider.Arguments;
 import org.testcontainers.containers.GenericContainer;
 
 import java.io.IOException;
-import java.net.URI;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.sql.SQLException;
-import java.time.Duration;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
 
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsInAnyOrder;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.isA;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
 @EnabledIf("isEnabled")
 abstract class AbstractProductionMySQLRuntimeE2ETest extends AbstractTransportParameterizedProductionRuntimeE2ETest {
     
@@ -71,11 +59,11 @@ abstract class AbstractProductionMySQLRuntimeE2ETest extends AbstractTransportPa
     
     protected static final String MASK_PLAN_TOOL_NAME = "database_gateway_plan_mask_rule";
     
-    protected static final String STDIO_LOGBACK_CONFIG_FILE_NAME = "mcp-e2e-sdk-stdio-logback.xml";
-    
     private GenericContainer<?> container;
     
     private String physicalSchemaName;
+    
+    private MySQLRuntimeFixture sharedRuntimeFixture;
     
     protected GenericContainer<?> getContainer() {
         return container;
@@ -87,6 +75,11 @@ abstract class AbstractProductionMySQLRuntimeE2ETest extends AbstractTransportPa
     
     @AfterEach
     void tearDownContainer() {
+        if (useSharedRuntimeFixture()) {
+            container = null;
+            physicalSchemaName = null;
+            return;
+        }
         if (null != container) {
             container.stop();
             container = null;
@@ -94,19 +87,57 @@ abstract class AbstractProductionMySQLRuntimeE2ETest extends AbstractTransportPa
         physicalSchemaName = null;
     }
     
+    @AfterAll
+    void tearDownSharedContainer() {
+        if (null != sharedRuntimeFixture) {
+            sharedRuntimeFixture.close();
+            sharedRuntimeFixture = null;
+        }
+    }
+    
     @Override
     protected void prepareRuntimeFixture() throws IOException {
         Assumptions.assumeTrue(MySQLRuntimeTestSupport.isDockerAvailable(),
                 () -> MySQLRuntimeTestSupport.createDockerRequiredMessage("Docker is required for the MySQL-backed production runtime E2E test."));
-        container = MySQLRuntimeTestSupport.createContainer();
-        container.start();
+        if (useSharedRuntimeFixture()) {
+            prepareSharedRuntimeFixture();
+            return;
+        }
+        applyRuntimeFixture(createRuntimeFixture());
+    }
+    
+    private void prepareSharedRuntimeFixture() throws IOException {
+        if (null == sharedRuntimeFixture) {
+            sharedRuntimeFixture = createRuntimeFixture();
+        }
+        applyRuntimeFixture(sharedRuntimeFixture);
+    }
+    
+    private MySQLRuntimeFixture createRuntimeFixture() throws IOException {
+        GenericContainer<?> result = MySQLRuntimeTestSupport.createContainer();
+        boolean success = false;
         try {
-            MySQLRuntimeTestSupport.initializeDatabase(container);
-            String detectedSchemaName = MySQLRuntimeTestSupport.detectSchema(container);
-            physicalSchemaName = detectedSchemaName.isEmpty() ? PHYSICAL_DATABASE_NAME : detectedSchemaName;
+            result.start();
+            MySQLRuntimeTestSupport.initializeDatabase(result);
+            String detectedSchemaName = MySQLRuntimeTestSupport.detectSchema(result);
+            success = true;
+            return new MySQLRuntimeFixture(result, detectedSchemaName.isEmpty() ? PHYSICAL_DATABASE_NAME : detectedSchemaName);
         } catch (final SQLException ex) {
             throw new IOException(ex);
+        } finally {
+            if (!success) {
+                result.stop();
+            }
         }
+    }
+    
+    private void applyRuntimeFixture(final MySQLRuntimeFixture fixture) {
+        container = fixture.container();
+        physicalSchemaName = fixture.physicalSchemaName();
+    }
+    
+    protected boolean useSharedRuntimeFixture() {
+        return false;
     }
     
     @Override
@@ -127,39 +158,23 @@ abstract class AbstractProductionMySQLRuntimeE2ETest extends AbstractTransportPa
     }
     
     protected static Stream<Arguments> transports() {
-        return runtimeTransports().map(each -> Arguments.of(getTransportName(each), each));
+        return ProductionRuntimeTransportCases.transports();
+    }
+    
+    protected static Stream<Arguments> dualTransports() {
+        return transports();
+    }
+    
+    protected static Stream<Arguments> semanticPrimaryTransport() {
+        return ProductionRuntimeTransportCases.semanticPrimaryTransport();
     }
     
     protected static Stream<Arguments> assertReadSingleMetadataResourceCases() {
-        return runtimeTransports().flatMap(each -> Stream.of(
-                Arguments.of(getTransportName(each) + " database detail", each, "shardingsphere://databases/logic_db", "database", LOGICAL_DATABASE_NAME),
-                Arguments.of(getTransportName(each) + " schema detail", each, "shardingsphere://databases/logic_db/schemas/logic_db", "schema", LOGICAL_DATABASE_NAME),
-                Arguments.of(getTransportName(each) + " table column detail", each,
-                        "shardingsphere://databases/logic_db/schemas/logic_db/tables/orders/columns/status", "column", "status"),
-                Arguments.of(getTransportName(each) + " view detail", each, "shardingsphere://databases/logic_db/schemas/logic_db/views/active_orders", "view", "active_orders"),
-                Arguments.of(getTransportName(each) + " view column detail", each,
-                        "shardingsphere://databases/logic_db/schemas/logic_db/views/active_orders/columns/status", "column", "status"),
-                Arguments.of(getTransportName(each) + " index detail", each,
-                        "shardingsphere://databases/logic_db/schemas/logic_db/tables/orders/indexes/idx_orders_status", "index", "idx_orders_status")));
+        return ProductionRuntimeTransportCases.assertReadSingleMetadataResourceCases(LOGICAL_DATABASE_NAME);
     }
     
     protected static Stream<Arguments> assertReadCollectionMetadataResourceCases() {
-        return runtimeTransports().flatMap(each -> Stream.of(
-                Arguments.of(getTransportName(each) + " schemas list", each, "shardingsphere://databases/logic_db/schemas", "schema", List.of(LOGICAL_DATABASE_NAME)),
-                Arguments.of(getTransportName(each) + " tables list", each,
-                        "shardingsphere://databases/logic_db/schemas/logic_db/tables", "table", List.of("order_items", "orders")),
-                Arguments.of(getTransportName(each) + " table columns list", each,
-                        "shardingsphere://databases/logic_db/schemas/logic_db/tables/orders/columns", "column", List.of("amount", "order_id", "status")),
-                Arguments.of(getTransportName(each) + " view columns list", each,
-                        "shardingsphere://databases/logic_db/schemas/logic_db/views/active_orders/columns", "column", List.of("order_id", "status"))));
-    }
-    
-    protected static Stream<RuntimeTransport> runtimeTransports() {
-        return Stream.of(RuntimeTransport.HTTP, RuntimeTransport.STDIO);
-    }
-    
-    protected static String getTransportName(final RuntimeTransport transport) {
-        return RuntimeTransport.HTTP == transport ? "http" : "stdio";
+        return ProductionRuntimeTransportCases.assertReadCollectionMetadataResourceCases(LOGICAL_DATABASE_NAME);
     }
     
     protected Map<String, RuntimeDatabaseConfiguration> createPreparedProgrammaticRuntimeDatabases() throws IOException {
@@ -168,21 +183,6 @@ abstract class AbstractProductionMySQLRuntimeE2ETest extends AbstractTransportPa
             return MySQLRuntimeTestSupport.createPreparedProgrammaticRuntimeDatabases(container);
         } catch (final SQLException ex) {
             throw new IOException("Failed to initialize MySQL programmatic runtime databases.", ex);
-        }
-    }
-    
-    protected Map<String, RuntimeDatabaseConfiguration> createMismatchedRuntimeDatabases() throws IOException {
-        prepareRuntime();
-        RuntimeDatabaseConfiguration runtimeDatabase = MySQLRuntimeTestSupport.createRuntimeDatabases(container, LOGICAL_DATABASE_NAME).get(LOGICAL_DATABASE_NAME);
-        return Map.of(LOGICAL_DATABASE_NAME, new RuntimeDatabaseConfiguration("PostgreSQL", runtimeDatabase.getJdbcUrl(), runtimeDatabase.getUsername(),
-                runtimeDatabase.getPassword(), runtimeDatabase.getDriverClassName()));
-    }
-    
-    protected void openAndCloseInteractionClient(final Map<String, RuntimeDatabaseConfiguration> runtimeDatabases) {
-        try (MCPInteractionClient interactionClient = createOpenedInteractionClient(runtimeDatabases)) {
-            interactionClient.listResources();
-        } catch (final IOException | InterruptedException ex) {
-            throw new IllegalStateException(ex);
         }
     }
     
@@ -233,18 +233,17 @@ abstract class AbstractProductionMySQLRuntimeE2ETest extends AbstractTransportPa
         assertTrue(capabilities.containsKey("next_action_contract"));
         assertTrue(capabilities.containsKey("common_flows"));
         assertTrue(capabilities.containsKey("security_hints"));
-        assertTrue(capabilities.containsKey("fingerprints"));
-        assertFalse(getMap(capabilities.get("fingerprints")).isEmpty());
+        assertFalse(capabilities.containsKey("fingerprints"));
         assertFalse(((List<?>) capabilities.get("common_flows")).isEmpty());
         Map<String, Object> modelFirstSummary = getMap(capabilities.get("model_first_summary"));
         assertThat(getMap(modelFirstSummary.get("official_discovery_methods")).get("tools"), is("tools/list"));
         assertThat(modelFirstSummary.get("optional_catalog_resource"), is("shardingsphere://capabilities"));
-        assertThat(getMap(modelFirstSummary.get("preflight_rule")).get("tool"), is("database_gateway_validate_proxy_connectivity"));
+        assertThat(getMap(modelFirstSummary.get("preflight_rule")).get("tool"), is("database_gateway_validate_runtime_database"));
         assertThat(getMap(getMap(modelFirstSummary.get("sql_tool_selection")).get("read_only")).get("tool"), is("database_gateway_execute_query"));
         assertThat(getMap(getMap(modelFirstSummary.get("workflow_rule")).get("preview_tool")).get("tool"), is("database_gateway_apply_workflow"));
         Map<String, Object> surfaceSummary = getMap(capabilities.get("surface_summary"));
         assertThat(getMap(surfaceSummary.get("official_discovery_methods")).get("resources"), is("resources/list"));
-        assertThat(surfaceSummary.get("preflight_validation_tool"), is("database_gateway_validate_proxy_connectivity"));
+        assertThat(surfaceSummary.get("preflight_validation_tool"), is("database_gateway_validate_runtime_database"));
         assertThat(surfaceSummary.get("read_only_sql_tool"), is("database_gateway_execute_query"));
         assertThat(surfaceSummary.get("side_effect_sql_tool"), is("database_gateway_execute_update"));
     }
@@ -273,8 +272,15 @@ abstract class AbstractProductionMySQLRuntimeE2ETest extends AbstractTransportPa
         assertThat(String.valueOf(actual.get("preview_semantics")), is("classification_only"));
         assertFalse((Boolean) actual.get("would_execute"));
         List<Map<String, Object>> nextActions = getMapList(actual.get("next_actions"));
-        assertThat(nextActions.stream().map(each -> String.valueOf(each.get("type"))).toList(), is(List.of("tool_call")));
-        assertFalse(nextActions.get(0).containsKey("requires_user_approval"));
+        assertThat(nextActions.stream().map(each -> String.valueOf(each.get("type"))).toList(), is(List.of("ask_user", "tool_call")));
+        Map<String, Object> askUserAction = nextActions.getFirst();
+        assertThat(askUserAction.get("order"), is(1));
+        assertThat(askUserAction.get("required_inputs"), is(List.of("execution_approved")));
+        Map<String, Object> toolCallAction = nextActions.get(1);
+        assertThat(toolCallAction.get("order"), is(2));
+        assertThat(toolCallAction.get("tool_name"), is("database_gateway_execute_update"));
+        assertThat(toolCallAction.get("depends_on"), is(List.of(1)));
+        assertThat(getMap(toolCallAction.get("arguments")).get("execution_mode"), is("execute"));
     }
     
     protected void assertAiNativeSqlResult(final MCPInteractionClient interactionClient) throws IOException, InterruptedException {
@@ -284,37 +290,17 @@ abstract class AbstractProductionMySQLRuntimeE2ETest extends AbstractTransportPa
         assertThat(String.valueOf(actual.get("row_object_status")), is("available"));
         assertThat(((List<?>) actual.get("row_objects")).size(), is(1));
         assertThat(String.valueOf(actual.get("truncated")), is("true"));
-        assertThat(String.valueOf(getMapList(actual.get("next_actions")).get(0).get("type")), is("ask_user"));
+        assertThat(String.valueOf(getMapList(actual.get("next_actions")).getFirst().get("type")), is("ask_user"));
     }
     
     protected McpSyncClient createElicitationClient(final RuntimeTransport transport, final List<McpSchema.ElicitRequest> elicitationRequests) throws IOException {
-        return McpClient.sync(createClientTransport(transport))
-                .clientInfo(new McpSchema.Implementation("mcp-e2e-elicitation", "MCP E2E Elicitation", "1.0.0"))
-                .capabilities(McpSchema.ClientCapabilities.builder().elicitation().build())
-                .requestTimeout(Duration.ofSeconds(30L))
-                .initializationTimeout(Duration.ofSeconds(30L))
-                .elicitation(request -> createElicitationResult(elicitationRequests, request))
-                .build();
+        return ProductionMCPClientTransportFactory.createElicitationClient(createClientTransport(transport), elicitationRequests, this::createElicitationResult);
     }
     
-    protected McpClientTransport createClientTransport(final RuntimeTransport transport) throws IOException {
+    private McpClientTransport createClientTransport(final RuntimeTransport transport) throws IOException {
         return RuntimeTransport.HTTP == transport
-                ? createHttpClientTransport()
-                : createStdioClientTransport();
-    }
-    
-    protected McpClientTransport createHttpClientTransport() throws IOException {
-        URI endpointUri = getHttpEndpointUri();
-        return HttpClientStreamableHttpTransport.builder(String.format("%s://%s:%d", endpointUri.getScheme(), endpointUri.getHost(), endpointUri.getPort()))
-                .endpoint(endpointUri.getPath()).build();
-    }
-    
-    protected StdioClientTransport createStdioClientTransport() throws IOException {
-        Path configFile = getConfigFile();
-        return new ProtocolAwareStdioClientTransport(ServerParameters.builder(Paths.get(System.getProperty("java.home"), "bin", "java").toString())
-                .args("-Dlogback.configurationFile=" + MCPStdioLogbackConfiguration.createForConfig(configFile, STDIO_LOGBACK_CONFIG_FILE_NAME),
-                        "-cp", System.getProperty("java.class.path"), MCPBootstrap.class.getName(), configFile.toString())
-                .build());
+                ? ProductionMCPClientTransportFactory.createHttpClientTransport(getHttpEndpointUri())
+                : ProductionMCPClientTransportFactory.createStdioClientTransport(getConfigFile());
     }
     
     protected McpSchema.ElicitResult createElicitationResult(final List<McpSchema.ElicitRequest> elicitationRequests,
@@ -322,25 +308,12 @@ abstract class AbstractProductionMySQLRuntimeE2ETest extends AbstractTransportPa
         elicitationRequests.add(request);
         List<String> requiredFields = getStringList(request.requestedSchema().get("required"));
         return new McpSchema.ElicitResult(McpSchema.ElicitResult.Action.ACCEPT, Map.of(
-                requiredFields.get(0), "1",
+                requiredFields.getFirst(), "1",
                 requiredFields.get(1), "3"));
     }
     
     protected void assertElicitationRequest(final List<McpSchema.ElicitRequest> actualRequests) {
-        assertThat(actualRequests.size(), is(1));
-        McpSchema.ElicitRequest actual = actualRequests.get(0);
-        assertThat(actual.meta().get(MCPShardingSphereMetadataKeys.TOOL), is(MASK_PLAN_TOOL_NAME));
-        assertFalse(String.valueOf(actual.meta().get(MCPShardingSphereMetadataKeys.PLAN_ID)).isBlank());
-        Map<String, Object> actualRequestedSchema = actual.requestedSchema();
-        assertThat(actualRequestedSchema.get("type"), is("object"));
-        assertFalse((Boolean) actualRequestedSchema.get("additionalProperties"));
-        Map<String, Object> actualProperties = castToMap(actualRequestedSchema.get("properties"));
-        assertTrue(actualProperties.containsKey("field_1"));
-        assertTrue(actualProperties.containsKey("field_2"));
-        assertThat(String.valueOf(castToMap(actualProperties.get("field_1")).get("description")), is("Please provide property `from-x`."));
-        assertThat(String.valueOf(castToMap(actualProperties.get("field_2")).get("description")), is("Please provide property `to-y`."));
-        assertFalse(actualProperties.keySet().stream().map(String::valueOf).anyMatch(each -> each.contains("secret") || each.contains("password") || each.contains("token")));
-        assertThat(getStringList(actualRequestedSchema.get("required")), hasItems("field_1", "field_2"));
+        ProductionMCPClientTransportFactory.assertElicitationRequest(actualRequests);
     }
     
     @SuppressWarnings("unchecked")
@@ -365,15 +338,28 @@ abstract class AbstractProductionMySQLRuntimeE2ETest extends AbstractTransportPa
         return ((List<?>) value).stream().map(String::valueOf).toList();
     }
     
-    protected static final class ProtocolAwareStdioClientTransport extends StdioClientTransport {
+    private static final class MySQLRuntimeFixture implements AutoCloseable {
         
-        protected ProtocolAwareStdioClientTransport(final ServerParameters params) {
-            super(params, MCPTransportJsonMapperFactory.create());
+        private final GenericContainer<?> container;
+        
+        private final String physicalSchemaName;
+        
+        private MySQLRuntimeFixture(final GenericContainer<?> container, final String physicalSchemaName) {
+            this.container = container;
+            this.physicalSchemaName = physicalSchemaName;
+        }
+        
+        private GenericContainer<?> container() {
+            return container;
+        }
+        
+        private String physicalSchemaName() {
+            return physicalSchemaName;
         }
         
         @Override
-        public List<String> protocolVersions() {
-            return List.of(ProtocolVersions.MCP_2025_06_18, ProtocolVersions.MCP_2025_11_25);
+        public void close() {
+            container.stop();
         }
     }
 }
